Fixed weird spacing.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     background: cornflowerblue;
 }
 #nav h1 {
-    height: 48px;
+    height: 8px;
     line-height: 8px;
     padding-right: 10px;
     padding-left: 10px;
